tests/neg-custom-args/captures/depfun-reach.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/depfun-reach.scala:13:4 ----------------------------------
13 |    op // error
   |    ^^
   |    Found:    (xs: List[(X, box () ->{io} Unit)]) ->{op} List[box () ->{xs*} Unit]
   |    Required: (xs: List[(X, box () ->{io} Unit)]) => List[() -> Unit]
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/depfun-reach.scala:20:60 ---------------------------------
20 |  val b: (xs: List[() ->{io} Unit]) => List[() ->{} Unit] = a // error
   |                                                            ^
   |                                        Found:    (xs: List[box () ->{io} Unit]) ->{a} List[box () ->{xs*} Unit]
   |                                        Required: (xs: List[box () ->{io} Unit]) => List[() -> Unit]
   |
   | longer explanation available when compiling with `-explain`
